<resources>
    <!-- 공용 -->
    <string name="app_name_kr">운다방</string>
    <string name="confirm">확인</string>
    <string name="next">다음</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <string name="nickname">닉네임</string>
    <string name="birth">생년월일</string>
    <string name="gender">성별</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="close">닫기</string>

    <!-- 업데이트 -->
    <string name="update_title">업데이트 알림</string>
    <string name="update_desc">새로운 버전이 출시되었습니다.\n앱을 업데이트해주세요.</string>
    <string name="update_btn">업데이트</string>    <string name="gender_male">남성</string>
    <string name="gender_female">여성</string>

    <string name="filter_all">전체</string>

    <string name="age_10">10대</string>
    <string name="age_20">20대</string>
    <string name="age_30">30대</string>
    <string name="age_40">40대</string>
    <string name="age_50">50대</string>
    <string name="age_60">60대 이상</string>

    <string name="score_over_20">20점 이상</string>
    <string name="score_over_40">40점 이상</string>
    <string name="score_over_60">60점 이상</string>
    <string name="score_over_80">80점 이상</string>

    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>

    <string name="novice">입문</string>
    <string name="beginner">초급</string>
    <string name="intermediate">중급</string>
    <string name="advanced">고급</string>
    <string name="expert">숙련</string>
    <string name="professional">선출</string>
    <string name="update_later_btn">나중에</string>

    <!-- 이용약관, 개인정보처리방침 링크 -->
    <string name="terms_link">https://www.undabang.store/legal/terms-of-service.html</string>
    <string name="privacy_link">https://www.undabang.store/legal/privacy-policy.html</string>

    <string name="bottom_sheet_delete">삭제하기</string>
    <string name="bottom_sheet_edit">수정하기</string>
    
    <!-- 차단 다이얼로그 -->
    <string name="block_dialog_title">회원 차단</string>
    <string name="block">차단</string>
    <string name="block_dialog_content">차단하면 차단한 회원이 보내는 메세지를 받을 수 없습니다. 또한, 매칭 지도에서 차단한 회원을 조회할 수 없습니다.</string>
    
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>

    <string name="skill_beginner">입문</string>
    <string name="skill_rookie">초급</string>
    <string name="skill_intermediate">중급</string>
    <string name="skill_advanced">고급</string>
    <string name="skill_skilled">숙련</string>
    <string name="skill_pro">선출</string>

    <!-- 에러 -->
    <string name="unknown_error">알 수 없는 오류가 발생했습니다.</string>
    <string name="server_error">서버 에러가 발생했습니다.</string>
    <string name="network_error">네트워크 연결에 실패했습니다.</string>
</resources>