<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/base_horizontal_margin"
    android:layout_marginVertical="6dp"
    android:background="@drawable/bg_preferred_exercise_detail"
    android:elevation="2dp"
    android:paddingVertical="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/exercise_type_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exercise_type_tv"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        app:layout_constraintBottom_toTopOf="@id/exercise_info_tv"
        app:layout_constraintStart_toEndOf="@id/exercise_type_iv"
        app:layout_constraintTop_toTopOf="@id/exercise_type_iv" />

    <TextView
        android:id="@+id/exercise_info_tv"
        style="@style/subtext_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray200"
        app:layout_constraintBottom_toBottomOf="@id/exercise_type_iv"
        app:layout_constraintStart_toStartOf="@id/exercise_type_tv"
        app:layout_constraintTop_toBottomOf="@id/exercise_type_tv" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="@color/gray300"
        app:layout_constraintTop_toBottomOf="@id/exercise_type_iv" />

    <TextView
        android:id="@+id/exercise_days_title_tv"
        style="@style/content_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/preferred_exercise_detail_days_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <LinearLayout
        android:id="@+id/exercise_days_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/exercise_days_title_tv">

        <TextView
            android:id="@+id/btn_mon"
            style="@style/DayButtonStyle"
            android:text="@string/mon" />

        <TextView
            android:id="@+id/btn_tue"
            style="@style/DayButtonStyle"
            android:text="@string/tue" />

        <TextView
            android:id="@+id/btn_wed"
            style="@style/DayButtonStyle"
            android:text="@string/wed" />

        <TextView
            android:id="@+id/btn_thu"
            style="@style/DayButtonStyle"
            android:text="@string/thu" />

        <TextView
            android:id="@+id/btn_fri"
            style="@style/DayButtonStyle"
            android:text="@string/fri" />

        <TextView
            android:id="@+id/btn_sat"
            style="@style/DayButtonStyle"
            android:text="@string/sat" />

        <TextView
            android:id="@+id/btn_sun"
            style="@style/DayButtonStyle"
            android:layout_marginEnd="0dp"
            android:text="@string/sun" />

    </LinearLayout>

    <TextView
        android:id="@+id/exercise_level_title_tv"
        style="@style/content_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/preferred_exercise_detail_days_skill_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise_days_ll" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_marginHorizontal="7dp"
        app:layout_constraintTop_toBottomOf="@+id/exercise_level_title_tv">

        <TextView
            android:id="@+id/btn_novice"
            style="@style/SkillButtonStyle"
            android:text="@string/novice" />

        <TextView
            android:id="@+id/btn_beginner"
            style="@style/SkillButtonStyle"
            android:text="@string/beginner" />

        <TextView
            android:id="@+id/btn_intermediate"
            style="@style/SkillButtonStyle"
            android:text="@string/intermediate" />

        <TextView
            android:id="@+id/btn_advanced"
            style="@style/SkillButtonStyle"
            android:text="@string/advanced" />

        <TextView
            android:id="@+id/btn_expert"
            style="@style/SkillButtonStyle"
            android:text="@string/expert" />

        <TextView
            android:id="@+id/btn_professional"
            style="@style/SkillButtonStyle"
            android:text="@string/professional" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>