<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_radius"
    android:orientation="vertical"
    android:padding="@dimen/base_horizontal_margin">

    <TextView
        android:id="@+id/title_tv"
        style="@style/content_bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/block_dialog_title" />

    <TextView
        android:id="@+id/content_tv"
        style="@style/subtext_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/block_dialog_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_horizontal_margin">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            style="@style/content_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_solid_corner"
            android:backgroundTint="@color/gray300"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white300" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/block_btn"
            style="@style/content_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_solid_corner"
            android:backgroundTint="@color/error_red"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/block"
            android:textColor="@color/white300" />
    </LinearLayout>
</LinearLayout>