<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_radius"
    android:backgroundTint="@color/whiteFF"
    android:padding="24dp">

    <TextView
        android:id="@+id/update_title_tv"
        style="@style/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/update_desc_tv"
        style="@style/content_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/update_desc"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintBottom_toTopOf="@id/update_btn_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_title_tv" />

    <LinearLayout
        android:id="@+id/update_btn_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/later_btn"
            style="@style/content_bold"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/basic_deactivate_btn"
            android:text="@string/update_later_btn"
            android:textColor="@color/whiteFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:stateListAnimator="@null"
            app:layout_constraintTop_toBottomOf="@id/update_desc_tv" />

        <View
            android:id="@+id/btn_blank"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_btn"
            style="@style/content_bold"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/basic_activate_btn"
            android:text="@string/update_btn"
            android:textColor="@color/whiteFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:stateListAnimator="@null"
            app:layout_constraintTop_toBottomOf="@id/update_desc_tv" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>